2008-04-18  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add mention on how to file bugs

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test-vpn.pcf: Add Cisco VPN mime-type (from David Zeuthen
	<david@fubar.dk>), and test case (Closes: #3560)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix expanded acronym for ODB
	files, spotted by jstaniek <js@iidea.pl> (Closes: #12686)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/ocf10-20060911.epub: Add application/epub+zip for
	Electronic Book documents, patch from Pino Toscano
	<pino@kde.org> (Closes: #12625)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.iptables: Add text/x-iptables for iptables
	scripts, for the benefit of gedit, definition from
	Ian Laurie <iml@zip.com.au> (Closes: #6652)

2008-04-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.3g2 as a possible suffix for
	3GPP files

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test-cdda.toc:
	* tests/test-cdrom.toc: Add mime-type for CDRDAO TOC files
	with (wobbly) magic (Closes: #11530)

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.med as MOD files, patch from
	Ville Skyttä <ville.skytta@iki.fi> (Closes: #10863)

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Require AVI files to have both the RIFF
	and the "AVI " bits, not just one of them (Closes: #12541)

	* tests/list:
	* tests/test.avi:
	* tests/test.wav: Add WAVE and AVI test files

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for KDC Kodak raw image files
	* tests/list:
	* tests/test.kdc: Add test case for that image file
	(Closes: #10357)

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: