@@ -106,6 +106,8 @@ project.glade application/x-glade
 test.alz application/x-alz
 # Copied from /usr/share/gettext/javaversion.class
 test.class application/x-java
+# Copied from http://bugs.freedesktop.org/show_bug.cgi?id=12620
+hello.pack application/x-java-pack200
 
 # Audio/Video files
 # Copied from /usr/share/sounds/generic.wav
