@@ -1,3 +1,10 @@
+2008-04-21  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/hello.pack:
+	* tests/list: Add mime-type for Pack200 archives, patch from
+	Ville Skyttä <ville.skytta@iki.fi> (Closes: #12620)
+
 2008-04-18  Bastien Nocera  <hadess@hadess.net>
 
 	* HACKING: Add mention on how to file bugs
